add ticket quantity selection

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
       type="text/javascript"
       src="https://js.squareupsandbox.com/v2/paymentform"
     ></script>
-  </head>
-  <body>
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+  <body class="mat-typography">
     <app-root></app-root>
   </body>
 </html>
