--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>ComedyV2</title>
+    <title>Prescott Comedy Club</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- link to the SqPaymentForm library -->
     <script
       type="text/javascript"
-      src="https://js.squareupsandbox.com/v2/paymentform"
+      src="https://js.squareup.com/v2/paymentform"
     ></script>
       <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
